@@ -689,7 +689,9 @@ display_system_info_common (bmc_info_state_data_t *state_data,
           && (ipmi_check_completion_code (obj_cmd_first_set_rs,
 					  IPMI_COMP_CODE_INVALID_COMMAND) == 1
 	      || ipmi_check_completion_code (obj_cmd_first_set_rs,
-					     IPMI_COMP_CODE_GET_SYSTEM_INFO_PARAMETERS_PARAMETER_NOT_SUPPORTED) == 1))
+					     IPMI_COMP_CODE_GET_SYSTEM_INFO_PARAMETERS_PARAMETER_NOT_SUPPORTED) == 1
+	      || ipmi_check_completion_code (obj_cmd_first_set_rs,
+					     IPMI_COMP_CODE_INVALID_DATA_FIELD_IN_REQUEST) == 1))
         {
           rv = 0;
           goto cleanup;
@@ -769,11 +771,12 @@ display_system_info_common (bmc_info_state_data_t *state_data,
         {
           if (!state_data->prog_data->args->get_system_info
               && ipmi_ctx_errnum (state_data->ipmi_ctx) == IPMI_ERR_BAD_COMPLETION_CODE
-              && (ipmi_check_completion_code (obj_cmd_first_set_rs,
+              && (ipmi_check_completion_code (obj_cmd_rs,
 					      IPMI_COMP_CODE_INVALID_COMMAND) == 1
-		  || ipmi_check_completion_code (obj_cmd_first_set_rs,
-						 IPMI_COMP_CODE_GET_SYSTEM_INFO_PARAMETERS_PARAMETER_NOT_SUPPORTED) == 1))
-
+		  || ipmi_check_completion_code (obj_cmd_rs,
+						 IPMI_COMP_CODE_GET_SYSTEM_INFO_PARAMETERS_PARAMETER_NOT_SUPPORTED) == 1
+		  || ipmi_check_completion_code (obj_cmd_rs,
+						 IPMI_COMP_CODE_INVALID_DATA_FIELD_IN_REQUEST) == 1))
             {
               rv = 0;
               goto cleanup;
